###############################################################################
 # Copyright (c) ArSysOp 2018-2022
 # 
 # RGM Sources are publicly available only for 
 # informational, review, analysis and consulting purposes.
 # 
 # Definitions, terms and conditions for using RGM Sources are stated by ArSysOp Source License version 1.0.
 # See http://arsysop.ru/licenses/rgm/ArSysOpSourceLicense-1.0.txt
 # 
 # RGM Sources are provided on "as is" basis. 
 # ArSysOp is not responsible for any damages, losses, legal prosecution 
 # or other consequences of any sort that using RGM Sources can cause to you 
 # (as an individual or Legal Entity), even if aware of such consequences.
 # 
###############################################################################
[package]
name = "loft-it"
description = "ArSysOp Language-Oriented Frameworks and Tools Requirements Gathering and Markup - Integrity Tests"
author = "ArSysOp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
html_parser = "0.6.0"
Inflector = "0.11.4"
reqwest = {version = "0.11.0"}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
